# DeployKit

./: .gitignore  COPYING  README.md  meson.build  meson_options.txt
docs/: meson.build  recipe.json-specs.md
po/: LINGUAS  POTFILES.in  meson.build  zh_CN.utf8.po
res/: dk-resources.gresource.xml  meson.build  resources.gresource.xml
res/ui/: dk-destinationrow.ui  dk-extracomponentrow.ui  dk-gui.css  dk-guimain.ui  dk-mirrorrow.ui  dk-networkconfig.ui  dk-variantrow.ui  gui.css  main.ui  networkconfig.ui
res/ui/mockup/: installing-done.ui  main.ui
res/ui/rows/: destination.ui  extracomponent.ui  mirror.ui  mirrorcustom.ui  variant.ui
src/: app.vala  dk-app.vala  dk-destinationrow.vala  dk-extracomponentrow.vala  dk-guimain.vala  dk-mirrorrow.vala  dk-networkconfig.vala  dk-variantrow.vala  dk-version.vala.in  main.vala  meson.build
src/dkir/: bootloaderinfo.vala  configinfo.vala  extractinfo.vala  ir.vala  meson.build  overrideinfo.vala  partitioninfo.vala  userinfo.vala
src/gui/: main.vala  meson.build  networkconfig.vala
src/gui/rows/: common.vala  destination.vala  destinationrow.vala  extracomponent.vala  extracomponentrow.vala  mirror.vala  mirrorcustom.vala  mirrorrow.vala  variant.vala  variantrow.vala
src/mirrors/: aosc-api-mirror.vala  aosc-api-mirrors.vala  meson.build
src/recipe/: bulletin.vala  meson.build  mirror.vala  recipe.vala  tarball.vala  variant.vala
src/rows/: destinationrow.vala
src/utils/: lang.vala  meson.build  version.vala.in
